--- a/src/styles/stylus/views/Menu.styl
+++ b/src/styles/stylus/views/Menu.styl
@@ -22,9 +22,10 @@
     background: $primary
     color: $white
     border none
-    padding 10px 20px
     font-weight: bold
     cursor pointer
+    +mobile()
+        width 27px
     span
         display: block
         center both
