--- a/src/styles/stylus/views/base.styl
+++ b/src/styles/stylus/views/base.styl
@@ -46,7 +46,10 @@ body
     font-family: 'avenir'
     font-weight: normal
     font-size 15px
-
+    &.padding
+        padding-left: 40px
+        +mobile()
+            padding-left: 28px
 h1, h2, h3
     font-family: 'antenna';
     font-weight: bold
@@ -66,6 +69,3 @@ h1, h2, h3
 
 .text-dark
     color: $black
-
-.navbar-brand
-    margin: 0 0 0 30px
